Voting checkmark now displays proper team color on a team's voting. Small fixes on UI overlapping navbar.

--- a/client/src/layouts/base/Base.css
+++ b/client/src/layouts/base/Base.css
@@ -1,5 +1,4 @@
-.content {
+.base-content {
   background-color: #f8f7f6;
   height: 91vh;
-  margin-top: 13px;
 }
